--- a/shopGPT_flask/Dockerfile
+++ b/shopGPT_flask/Dockerfile
@@ -7,6 +7,8 @@ WORKDIR /app
 # Add the current directory contents into the container at /app
 ADD . /app
 
+RUN python -m pip install --upgrade pip
+
 # Install any needed packages specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
