--- a/shopGPT_flask/service.yaml
+++ b/shopGPT_flask/service.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   template:
     spec:
+      serviceAccountName: docker-service-account@shopgpt.iam.gserviceaccount.com
       containers:
       - image: us-west2-docker.pkg.dev/shopgpt/shopgptar/shopgpt-backend
 
