--- a/shopgpt_vue_app/package.json
+++ b/shopgpt_vue_app/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-google-oauth2": "^1.5.10",
     "vue-router": "^4.2.1",
+    "vue3-google-login": "^2.0.15",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
