--- a/firebase.json
+++ b/firebase.json
@@ -8,6 +8,13 @@
     ],
     "rewrites": [
       {
+        "source": "/api/**",
+        "run": {
+          "serviceId": "shopgpt-cloudbuild-service",
+          "region": "us-west2"
+        }
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
