--- a/shopGPT_flask/requirements.txt
+++ b/shopGPT_flask/requirements.txt
@@ -3,50 +3,24 @@ aiosignal==1.3.1
 async-timeout==4.0.2
 attrs==23.1.0
 blinker==1.6.2
-CacheControl==0.12.11
-cachetools==5.3.1
 certifi==2023.5.7
-cffi==1.15.1
 charset-normalizer==3.1.0
 click==8.1.3
-cryptography==40.0.2
-firebase-admin==6.1.0
-Flask==2.3.2
+Flask==2.0.1
 Flask-Cors==3.0.10
 frozenlist==1.3.3
-google-api-core==2.11.0
-google-api-python-client==2.87.0
-google-auth==2.19.0
-google-auth-httplib2==0.1.0
-google-cloud-core==2.3.2
-google-cloud-firestore==2.11.1
-google-cloud-storage==2.9.0
-google-crc32c==1.5.0
-google-resumable-media==2.5.0
-googleapis-common-protos==1.59.0
-grpcio==1.54.2
-grpcio-status==1.54.2
-httplib2==0.22.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
-msgpack==1.0.5
 multidict==6.0.4
 openai==0.27.6
-proto-plus==1.22.2
-protobuf==4.23.2
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pycparser==2.21
-PyJWT==2.7.0
-pyparsing==3.0.9
-python-dotenv==1.0.0
+python-dotenv==0.21.1
 requests==2.30.0
-rsa==4.9
 six==1.16.0
 tqdm==4.65.0
-uritemplate==4.1.1
-urllib3==1.26.16
-Werkzeug==2.3.4
+urllib3==2.0.2
+Werkzeug==2.2.3
 yarl==1.9.2
+gunicorn
+firebase-admin==6.1.0
