--- a/shopgpt_vue_app/package.json
+++ b/shopgpt_vue_app/package.json
@@ -14,8 +14,10 @@
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "element-plus": "^2.3.5",
+    "eslint": "^8.41.0",
     "firebase": "^9.22.1",
     "vue": "^3.2.13",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.2.1",
     "vue3-google-login": "^2.0.15",
     "vuex": "^4.0.2"
@@ -26,7 +28,6 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3"
   },
   "eslintConfig": {
