increase gunicorn timeout

--- a/shopGPT_flask/Dockerfile
+++ b/shopGPT_flask/Dockerfile
@@ -16,5 +16,5 @@ RUN pip install --no-cache-dir -r requirements.txt
 EXPOSE 8080
 
 # Run app.py when the container launches
-CMD ["gunicorn", "-b", ":8080", "shopGPT_flask:app"]
+CMD ["gunicorn", "-b", ":8080", "--timeout", "120", "shopGPT_flask:app"]
 
